third_party/rust/chromium_crates_io/vendor/cxx-v1/tests/ui/repr_align_suffixed.stderr
error: invalid suffix `int` for number literal
 --> tests/ui/repr_align_suffixed.rs:3:18
  |
3 |     #[repr(align(2int))]
  |                  ^^^^ invalid suffix `int`
  |
  = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error[E0693]: incorrect `repr(align)` attribute format: `align` takes exactly one argument in parentheses
 --> tests/ui/repr_align_suffixed.rs:1:1
  |
1 | #[cxx::bridge]
  | ^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)
