third_party/rust/chromium_crates_io/vendor/cxx-v1/tests/ui/repr_align_suffixed.rs
#[cxx::bridge]
mod ffi {
    #[repr(align(2int))]
    struct StructSuffix {
        i: i32,
    }
}

fn main() {}
